tests/expectations/parser/structs/only_comma_separators_fail.out
Error [EPAR0370005]: expected '}', ',' -- found ';'
    --> test:8:10
     |
   8 |     x: u8;
     |          ^
